build_output.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:generateDebugRFile UP-TO-DATE
> Task :app:compileDebugKotlin NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\mrsbz\OneDrive\Documents\CampusSkill\app\src\main\java\com\muproject\campusskill\PublicProfileFragment.java:73: error: incompatible types: com.muproject.campusskill.model.User cannot be converted to com.muproject.campusskill.data.model.User
                    updateUI(response.body().getData());
                                                    ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error

[Incubating] Problems report is available at: file:///C:/Users/mrsbz/OneDrive/Documents/CampusSkill/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.
  C:\Users\mrsbz\OneDrive\Documents\CampusSkill\app\src\main\java\com\muproject\campusskill\PublicProfileFragment.java:73: error: incompatible types: com.muproject.campusskill.model.User cannot be converted to com.muproject.campusskill.data.model.User
                      updateUI(response.body().getData());
                                                      ^
  Note: Some input files use or override a deprecated API.
  Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 2s
10 actionable tasks: 1 executed, 9 up-to-date
